--- a/css/pages/careers.css
+++ b/css/pages/careers.css
@@ -3,17 +3,28 @@
 }
 
 #hero {
-  padding: 0;
+  padding: 5rem 0 0 0;
   position: relative;
-  min-height: 100vh;
+  /*min-height: 100vh;*/
 
-  background-image: url("../../assets/backgrounds/careers_hero.svg");
-  background-size: cover;
-  background-position: bottom;
+  background-image: url("../../assets/backgrounds/careers_hero_mobile.svg");
+  background-size: 100%;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+@media (min-width: 768px) {
+  #hero {
+    background-position: bottom;
+  }
+}
+
+#hero h2 {
+  margin: 3rem auto 0 auto;
 }
 
 #hero .careers-logo {
-  max-width: 100%;
+  max-width: 90%;
   margin: 0 auto;
 }
 
@@ -50,13 +61,16 @@
   font-size: 1.6rem;
 }
 
+#positions {
+  padding-bottom: 0;
+}
+
 #positions .bg.circle {
   pointer-events: none;
-  width: 60%;
-  margin: auto;
+  width: 100%;
 
   position: absolute;
-  top: -12rem;
+  top: calc(-15vw * 1.5);
   left: 0;
   right: 0;
 }
@@ -64,10 +78,9 @@
 #cv .bg.light {
   pointer-events: none;
   width: 100%;
-  margin: auto;
 
   position: absolute;
-  bottom: 70vh;
+  top: -17%;
   left: 0;
   right: 0;
 }
@@ -107,7 +120,27 @@
   fill: var(--main-bg-color);
 }
 
+#positions .bg.pattern {
+  width: 100%;
+}
+
 @media (min-width:980px) {
+  #hero {
+    background-image: url("../../assets/backgrounds/careers_hero.svg");
+  }
+
+  #hero .careers-logo {
+    max-width: 60%;
+  }
+
+  #positions .bg.circle {
+    width: 60%;
+    margin: 0 auto;
+    position: absolute;
+    top: calc(-12vw * 1.5);
+    left: 0;
+    right: 0;
+  }
   #offer .card h4 {
     margin-bottom: .75rem;
     font-size: 2rem;
@@ -131,16 +164,29 @@
   #positions .card h4 {
     margin-bottom: .7rem;
   }
+  #positions {
+    padding-bottom: 6rem;
+  }
+  #cv {
+    margin: 0;
+    padding-top: 6rem;
+  }
+  #cv .bg.light {
+    width: 65%;
+    position: absolute;
+    left: unset;
+    top: -47%;
+    right: 11%;
+  }
 }
 
 #offer .bg.light {
   pointer-events: none;
-  width: 45%;
+  width: 90%;
 
   position: absolute;
   left: 0;
-  bottom: 0;
-  top: 0;
+  top: -28%;
 }
 
 #offer ul, #positions .filtered-content {
@@ -227,8 +273,8 @@
 }
 
 #cv {
-  background-image: url("../../assets/backgrounds/footer.svg");
-  background-size: cover;
+  margin-top: -3rem;
+  padding-top: 0;
 }
 
 #cv form .cta-btn {
@@ -266,6 +312,14 @@
 }
 
 @media screen and (min-width: 980px) {
+  #cv {
+    background-image: url("../../assets/backgrounds/footer.svg");
+    background-size: cover;
+  }
+  #offer .bg.light {
+    width: 45%;
+    top: -70%;
+  }
   .location-tag, .time-tag {
     padding: .4rem .8rem;
     font-size: 1.3rem;
