--- a/css/pages/home.css
+++ b/css/pages/home.css
@@ -86,7 +86,7 @@
     right: 0;
     bottom: 0;
     top: 0;
-    background: linear-gradient(180deg, #FFFFFF 63.64%, rgba(255, 255, 255, 0) 95.45%);
+    background: linear-gradient(180deg, transparent 63.64%, rgba(255, 255, 255, 0) 95.45%);
   }
   .blog-container {
     flex-basis: 33%;
@@ -182,6 +182,8 @@
 }
 
 #about .card {
+  padding: 1.5rem;
+  min-height: 100px;
   margin: 0;
   flex: 1;
 }
@@ -192,10 +194,6 @@
 
 #about .svg object {
   width: 100%;
-}
-
-#about .card {
-  padding: 1.5rem;
 }
 
 #about .card:hover h4 {
