--- a/css/common.css
+++ b/css/common.css
@@ -131,6 +131,58 @@ h3 {
   left: 50%;
 }
 
+.modal-window.active {
+  display: flex;
+}
+
+.modal-window {
+  display: none;
+  background: var(--main-bg-color);
+  z-index: 999;
+  position: fixed;
+  right: 0;
+  top: 0;
+  left: 0;
+  bottom: 0;
+}
+
+.modal-close {
+  cursor: pointer;
+  position: absolute;
+  right: -40px;
+  top: -40px;
+}
+
+.modal-window .actions .btn {
+  background: var(--main-bg-color);
+}
+.modal-window .actions .btn:hover path {
+  fill: var(--main-font-color);
+}
+
+.modal-window .content {
+  position: relative;
+  background: rgba(255, 255, 255, .2);
+  border-radius: 4rem;
+  margin: 0 auto;
+}
+
+.modal-window .content .description {
+  max-height: 500px;
+  overflow: scroll;
+}
+
+.modal-window .content.l {
+  max-width: 70%;
+}
+
+.modal-window .content.m {
+  max-width: 60%;
+}
+
+.modal-window .content.s {
+  max-width: 40%;
+}
 
 section:not(:first-of-type) {
   padding: 6rem 0;
