--- a/css/common.css
+++ b/css/common.css
@@ -144,13 +144,25 @@ h3 {
   top: 0;
   left: 0;
   bottom: 0;
+  /*animation: appear .3s ease-in-out;*/
 }
+
+/*@keyframes appear {*/
+/*  0% {*/
+/*    opacity: .4;*/
+/*    transform: translateY(-50%) scale(.8);*/
+/*  }*/
+/*  100% {*/
+/*    opacity: 1;*/
+/*    transform: translateY(0) scale(1);*/
+/*  }*/
+/*}*/
 
 .modal-close {
   cursor: pointer;
   position: absolute;
-  right: -40px;
-  top: -40px;
+  right: 6px;
+  top: 6px;
 }
 
 .modal-window .actions .btn {
@@ -162,7 +174,7 @@ h3 {
 
 .modal-window .content {
   position: relative;
-  background: rgba(255, 255, 255, .2);
+  background: rgba(255, 255, 255, .12);
   border-radius: 4rem;
   margin: 0 auto;
 }
@@ -172,16 +184,24 @@ h3 {
   overflow: scroll;
 }
 
-.modal-window .content.l {
-  max-width: 70%;
+.modal-window .content .description .simplebar-wrapper {
+  position: relative;
 }
 
-.modal-window .content.m {
-  max-width: 60%;
+.modal-window .description .shadow {
+  pointer-events: none;
+  height: 120px;
+
+  position: absolute;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: linear-gradient(180deg, rgba(46,39,56,0) 0%, rgba(46,39,56,1) 100%);
 }
 
-.modal-window .content.s {
-  max-width: 40%;
+.modal-window .content.l, .modal-window .content.m, .modal-window .content.s {
+  height: 100%;
+  max-width: 100%;
 }
 
 section:not(:first-of-type) {
@@ -189,10 +209,30 @@ section:not(:first-of-type) {
 }
 
 @media (min-width: 768px) {
+  .modal-window .content.l {
+    height: initial;
+    max-width: 70%;
+  }
+
+  .modal-window .content.m {
+    height: initial;
+    max-width: 60%;
+  }
+
+  .modal-window .content.s {
+    height: initial;
+    max-width: 40%;
+  }
+
   section .container > p {
     margin-left: auto;
     margin-right: auto;
     width: 80%;
+  }
+
+  .modal-close {
+    right: -25px;
+    top: -25px;
   }
 }
 
@@ -258,7 +298,7 @@ p {
 }
 
 .w-100 {
-  width: 100%;
+  width: 100%!important;
 }
 
 .filters {
@@ -280,7 +320,7 @@ p {
   background: var(--hover-bg-color);
 }
 
-.input, #file+label {
+.input, #file+label, #file-modal {
   width: 100%;
   position: relative;
 }
@@ -317,17 +357,17 @@ input::placeholder, textarea::placeholder {
   font-family: "Lexend Regular";
 }
 
-#file+label {
+#file+label, #file-modal {
   cursor: pointer;
   color: rgba(255, 255, 255, .2);
 }
 
-input, textarea, .cta-btn, #file+label {
+input, textarea, .cta-btn, #file+label, #file-modal+label {
   font-size: 2rem;
   border-radius: 3rem;
 }
 
-input, textarea, #file+label {
+input, textarea, #file+label, #file-modal+label {
   display: block;
   width: inherit;
   padding: 1.8rem 2rem;
@@ -356,7 +396,7 @@ form input~span, form textarea~span {
   border-radius: 1.5rem;
 }
 
-#file {
+#file, #file-modal {
   visibility: hidden;
   position: absolute;
   left: -9999%;
@@ -367,7 +407,7 @@ form input~span, form textarea~span {
   .error-text {
     font-size: 1rem;
   }
-  input, textarea, #file + label {
+  input, textarea, #file + label, #file-modal + label {
     padding: 1.3rem 2rem;
     font-size: 1.5rem;
     border-radius: 2.5rem;
@@ -534,7 +574,7 @@ form input~span, form textarea~span {
   font-size: 2rem;
 }
 
-#file {
+#file, #file-modal {
   visibility: hidden;
 }
 
