--- a/css/common.css
+++ b/css/common.css
@@ -28,6 +28,27 @@ input, textarea {
   color: var(--main-font-color);
 }
 
+textarea::-webkit-scrollbar {
+  margin-right: 8px;
+  padding-right: 8px;
+  border-radius: 6px;
+  width: 8px;
+}
+
+textarea::-webkit-scrollbar-track {
+  margin: 20px 8px 20px 0;
+  padding-right: 8px;
+  border-radius: 6px;
+
+  background-color: rgba(255, 255, 255, .12);
+}
+
+textarea::-webkit-scrollbar-thumb {
+  border-radius: 6px;
+  background-color: var(--secondary);
+  outline: 1px solid slategrey;
+}
+
 a:hover {
   color: var(--secondary-font-color);
 }
