--- a/css/pages/news.css
+++ b/css/pages/news.css
@@ -60,6 +60,7 @@
 
 .news-content img {
   width: 100%;
+  max-height: 300px;
 
   border-radius: 1rem;
 }
@@ -139,7 +140,7 @@
   }
 
   .news-content img {
-    border-radius: 10rem;
+    border-radius: 15rem;
   }
 
   .news-content .publication-date {
